# poetry-tox-docker

./: Dockerfile  README.md  pyproject.toml  tox.ini
pyenv-poetry/: CHANGELOG.md  Dockerfile  README.md
pyenv-poetry-lambda-runtimes/: CHANGELOG.md  Dockerfile  README.md
pyenv-poetry-lambda-runtimes-onbuild/: CHANGELOG.md  Dockerfile  README.md
sample-lib/: .dockerignore  Dockerfile  README.md  tox.ini
sample-lib/tests/: test_poetry_tox_docker.py
