[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Grady Barrett <Grady.Barrett@Gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.24.4"
tox-pyenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
